--- a/src/pages/feedbacks/ListPage/components/Sidebar/style.scss
+++ b/src/pages/feedbacks/ListPage/components/Sidebar/style.scss
@@ -2,19 +2,22 @@
 @use "@/sass/abstract/" as *;
 
 $header-height: 72px;
+$content-margin: map.get($content-margin, "mobile");
 
 .sidebar {
-  height: 100vh;
+  height: 100%;
   max-width: 320px;
-  width: 80vw;
+  width: min(80vw, 320px);
   position: absolute;
   right: 0;
   top: $header-height;
   background-color: map.get($colors, "white2");
   z-index: map.get($z-index, "popover");
+  overflow: auto;
 
   &__content {
-    padding: map.get($content-margin, "mobile");
+    margin-bottom: $header-height;
+    padding: $content-margin $content-margin $header-height $content-margin;
   }
 
   &__item:not(:last-child) {
@@ -22,7 +25,7 @@ $header-height: 72px;
   }
 
   &__overlay {
-    height: calc(100vh - $header-height);
+    height: calc(100% - $header-height);
     margin-top: $header-height;
   }
 
@@ -35,10 +38,10 @@ $header-height: 72px;
     display: flex;
     height: $header-height;
     justify-content: space-between;
-    padding: 0 map.get($content-margin, "mobile");
+    padding: 0 $content-margin;
     position: fixed;
     width: 100vw;
-    z-index: map.get($z-index, 'sticky');
+    z-index: map.get($z-index, "sticky");
     small {
       opacity: 0.75;
     }
